--- a/adios.html
+++ b/adios.html
@@ -6,7 +6,7 @@
 </head>
 <body >
 	<div class="fluidContainer" id="fnbtLgDiv">
-		<img id="logo" src="fanbot.png">
+		<img id="logo" src="media/images/fanbot.png">
 	</div>
 
 	<div class="fluidContainer" id="fnbtLgDiv">
