--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 	<div class="fluidContainer" id="fnbtLgDiv">
-		<img id="logo" src="fanbot.png">
+		<img id="logo" src="media/Images/fanbot.png">
 	</div>
 
 	<div class="fluidContainer" id="fnbtLgDiv">
@@ -28,7 +28,7 @@
 	</div>
 
 	<div class="fluidContainer" >
-		<img src="serial.png">
+		<img src="media/Images/serial.png">
 	</div>
 
 
