--- a/fb_login.html
+++ b/fb_login.html
@@ -4,7 +4,8 @@
 <meta name="viewport" content="user-scalable=no" />
 
 <link rel="stylesheet" type="text/css" href="style.css">
-<script>	
+<script>
+	console.log(window.location.href); 	
 	var fbLogin = function(){
 	    window.location="https://www.facebook.com/dialog/oauth?client_id=1645165719040597&redirect_uri=http://fanbot.me/m/interaccion.html&scope=email";
 	    }
@@ -16,7 +17,7 @@
 
 <body>
 	<div class="fluidContainer" id="fnbtLgDiv">
-		<img id="logo" src="fanbot.png">
+		<img id="logo" src="media/images/fanbot.png">
 	</div>
 	<div id="main">
 		<div id="main-div">
