--- a/interaccion.html
+++ b/interaccion.html
@@ -44,7 +44,7 @@ function gup( name ){
   };
 </script>
 	<div class="fluidContainer" id="fnbtLgDiv">
-		<img id="logo" src="fanbot.png">
+		<img id="logo" src="media/images/fanbot.png">
 	</div>
 
 	<div class="fluidContainer" id="fnbtLgDiv">
@@ -52,7 +52,7 @@ function gup( name ){
 	</div>
 
 	<div class="fluidContainer" id="fnbtLgDiv">
-		<img id="logo" src="instructables.png">
+		<img id="logo" src="media/images/instructables.png">
 	</div>
 
 	<div class="fluidContainer" id="fnbtLgDiv">
